@@ -206,11 +206,13 @@ handwritten_tests = \
   subroutine-name-invalid-3.test \
   subroutine-name-missing-1.test \
   subroutine-name-missing-2.test \
+  switch_f77.test \
+  switch-nested.test \
+  switch-nested_f77.test \
   switch-fail-case-label-duplicated.test \
   switch-fail-case-label-invalid.test \
   switch-fail-no-braces.test \
   switch-non-positive-values_f77.test \
-  switch_f77.test \
   synerr-basic.test \
   synerr-define-lineno.test \
   synerr-include-lineno.test \
