@@ -1,0 +1,61 @@
+#!/bin/sh
+# Copyright (C) 2010 Stefano Lattarini <stefano.lattarini@gmail.com>.
+# This file is part of the Ratfor Testsuite.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Test that nested `switch/case' statements are processed without errors.
+
+. ../lib/rat4-testsuite-init.sh || exit 99
+
+cat > tst.r <<EOF
+switch(foobarbaz) {
+    case 0: switch(zardozquux) {}
+    case 1: caseoneflat
+    case 2:
+        switch(111+222+333) {
+          case 1: {
+            caseonenested
+          }
+          case 2: casetwonested
+          case 3:
+            switch(444-555) { case 10: case10nestedx2 }
+          default: ; {defaultnested}
+        }
+        casetwoflat
+    default:
+        defaultflat
+}
+EOF
+
+cat tst.r
+
+run_RATFOR tst.r || testcase_FAIL
+test -s stderr && testcase_FAIL
+
+for x in caseone casetwo default; do
+    for y in flat nested; do
+        test `$FGREP -c $x$y stdout` -eq 1
+    done
+done
+
+test `$FGREP -c case10nestedx2 stdout` -eq 1
+
+for rx in 'foobarbaz' 'zardozquux' '111 *+ *222 *+ *333' '444 *- *555'; do
+    test `$GREP -c "=.*$rx" stdout` -eq 1
+done
+
+testcase_DONE
+
+# vim: ft=sh ts=4 sw=4 et
