@@ -1,0 +1,82 @@
+#!/bin/sh
+# Copyright (C) 2010 Stefano Lattarini <stefano.lattarini@gmail.com>.
+# This file is part of the Ratfor Testsuite.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Test that nested `switch/case' statements works.
+# Test the `switch/case' statement (by compiling and running the generated
+# fortran code)
+
+. ../lib/rat4-testsuite-init.sh || exit 99
+
+cat > tst.r <<EOF
+program testswtich
+    integer i, j
+10 format('SWITCH n.1: i = ', I10, ', j = ', I10)
+20 format('SWITCH n.2: i = ', I10, ', j = ', I10, ', k = ', I10)
+500 format('BAD BAD BAD')
+    i = 1
+    j = 2
+    k = 3
+    switch(i) {
+        case 1:
+            switch(j) {
+                case 2: write(*,10) i, j
+            }
+    }
+    switch(i) {
+        case 0:
+            write(*,500)
+        case 2:
+        default:
+            switch(j+k) {
+                case 5:
+                    switch(k) {
+                        case 3,4:
+                            switch(i+k*2) {
+                                case 7:
+                                    write(*,20) i, j, k
+                            }
+                        case 1:
+                            write(*,500)
+                    }
+            }
+    }
+    call halt
+end
+EOF
+
+cat > exp <<EOF
+SWITCH n.1: i = 1, j = 2
+SWITCH n.2: i = 1, j = 2, k = 3
+EOF
+
+cat tst.r
+
+run_RATFOR tst.r || testcase_FAIL
+mv stdout tst.f
+run_F77 tst.f || testcase_FAIL
+run_command ./tst.exe || testcase_FAIL
+test -s stderr && testcase_FAIL
+ws_normalize <stdout >got
+
+cat exp
+cat got
+
+$DIFF_U exp got || testcase_FAIL
+
+testcase_DONE
+
+# vim: ft=sh ts=4 sw=4 et
