@@ -2,6 +2,7 @@ List of user-visible changes of Ratfor Testsuite.
 
 New in XXX
 -----------
+ * Added tests checking that nested "switch" statements work.
  * New test ensuring that comments are not terminated by semicolons or
    right curly brackets.
  * Much better and more extensive tests on the "repeat/until" statement.
